--- a/projects/styles.css
+++ b/projects/styles.css
@@ -12,23 +12,25 @@ body {
     margin-bottom: 170px;
 }
 #pTotal {
-    color: #940994;
+    color: #BB4C05;
+    
     font-size: 50px;
     width: 50px;
     height: 50px;
-    /* position: relative;
-    left: 670px;
-    top: 100px; */
+    position: absolute;
+    /* left: 670px;
+    top: 100px; */ 
     text-align: center;
-    margin-bottom: 10px;
+    /* margin-bottom: 10px; */
+    margin-left: -15px;
 }
 
 #total {
     display: flex;
     flex-direction: column;
+    position: relative;
     height: 150px;
-    width: 80px;
-    border: solid rebeccapurple;
+    width: 100px;
     justify-content: center;
     align-items: center;
     margin-left: 400px;
@@ -70,7 +72,7 @@ body {
     align-items: center;
     justify-content: center;
     /* position: relative; */ 
-    margin-left: 150px;
+    margin-left: 250px;
     
 } 
 
@@ -100,11 +102,11 @@ form {
 }
 
 #submit{
-    /* position: relative;  */
-    height: 25px;
+    position: absolute; 
+    height: 20px;
     width: 60px;
-    margin-top: 60px;
-    /* left: -220px;  */
+    margin-top: 130px;
+    border-radius: 30%;
 }
 /* button {
     position: absolute;
@@ -142,4 +144,86 @@ form {
 }
 h1{
     margin-bottom: 0px;
+}
+input{
+    height: 13px;
+    width: 70px;
+    border: solid black 2px;
+    border-radius: 20%;
+    font-size: 14px;
+}
+
+button {
+    z-index: 10;
+}
+@media(min-width: 500px) and (max-width: 768px ){
+    form {
+        /* margin-top: -694px; */
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    
+    }
+    .baddies{
+        display:flex;
+        flex-direction: column;
+        
+    }
+    #total {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        height: 150px;
+        width: 100px;
+        justify-content: center;
+        align-items: center;
+        /* margin-left: 400px; */
+    }
+    #Goomba-image{
+        /* grid-column: 1/2;
+        grid-row: 3/4; */
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        flex-shrink: 2;
+        /* margin-top: 120px;
+        margin-left: 30px; */
+        justify-content: center;
+    
+    }
+    #Bowser-image{
+        /* grid-column: 2/3;
+        grid-row: 2/3; */
+        display: flex;
+        flex-direction: column;
+        flex-shrink: 2;
+        /* margin-top: -120px; */
+        align-items: center;
+        justify-content: center;
+        /* position: relative; */ 
+        /* margin-left: 250px; */
+        
+    } 
+    #Spiny-image{
+        /* grid-column: 3/4;
+        grid-row: 1/2; */
+        display: flex;
+        flex-direction: column;
+        flex-shrink: 2;
+        align-items: center;
+        text-align: center;
+        /* margin-top: -44px;
+        margin-right: 270px;  */
+    }
+    #imageMario{
+        margin-bottom: 0px;
+    }
+    #images {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        justify-content: center;
+        /* margin-bottom: 50px; */
+    }
+    
 }
