--- a/projects/styles.css
+++ b/projects/styles.css
@@ -53,16 +53,32 @@ body {
 }
 
 #Goomba-image{
-    /* grid-column: 1/2;
-    grid-row: 3/4; */
     display: flex;
     flex-direction: column;
     text-align: left;
     margin-top: 120px;
     margin-left: 30px;
     justify-content: center;
+    animation-name: goomba;
+    animation-duration: 2s;
+    animation-timing-function: ease-out; 
+    animation-delay: .2s; 
+    -webkit-transform: rotate(360deg);
+          transform: rotateY(360deg);
 
 }
+@keyframes goomba {
+    from {
+        margin-left: 300%; 
+        width: 300%;
+    }
+    to{
+        margin-left: 0%;
+        width: 100%;
+    }
+    
+}
+
 #Bowser-image{
     /* grid-column: 2/3;
     grid-row: 2/3; */
@@ -180,16 +196,12 @@ button {
         /* margin-left: 400px; */
     }
     #Goomba-image{
-        /* grid-column: 1/2;
-        grid-row: 3/4; */
         display: flex;
         flex-direction: column;
         text-align: center;
-        flex-shrink: 2;
-        /* margin-top: 120px;
-        margin-left: 30px; */
+        /* flex-shrink: 2; */
         justify-content: center;
-    
+        
     }
     #Bowser-image{
         /* grid-column: 2/3;
