--- a/react/projects/portfolio/portfolio/src/styles.css
+++ b/react/projects/portfolio/portfolio/src/styles.css
@@ -13,7 +13,7 @@ body{
 }
 
 .header >h1{
-  font-size: 75px; 
+  font-size: 85px; 
   font-family: 'Mitr', sans-serif;
   text-align: left;
   color: rgb(211, 227, 211);
@@ -47,6 +47,11 @@ body{
     font-size: 25px;
     text-decoration: none;
     font-family: 'Nunito', sans-serif;
+}
+.navbar >a:hover{
+    font-size: 40px;
+    text-shadow: 3px 4px 3px rgb(64, 142, 163);
+
 }
 
 :root{
@@ -114,7 +119,6 @@ body{
 }
 
 .list{
-
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  margin-left: 210px;
@@ -160,6 +164,110 @@ body{
     font-size: 18px;
     font-family: 'Open Sans', sans-serif;
     text-align: center;
+    margin-bottom: 50px;
 }
+.icon{   
+    margin-top: 40px;
+}
+.icon > a{
+    margin-right: 20px;
+}
+
+@media screen and (max-width:600px) {
+    .navbar{
+        flex-wrap: wrap;
+    }
+    .navbar >a{
+        font-size: 20px;
+    }
+    .header{
+        background-repeat: no-repeat;
+        flex-wrap: wrap;
+        height: fit-content;
+        /* width: fit-content; */
+    
+    }
+    .header >h1{
+        font-size: 50px;
+        text-align: center; 
+        margin-left: 0;
+        
+      }
+    .header >h2 {
+        font-size: 30px;
+        text-align: center;
+        margin-left: 0;
+        flex-wrap: wrap;
+    } 
+    .about-container {
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-top: 0;
+    }
+    .about{
+        /* width: 100vw; */
+        display: flex;
+        flex-direction: column;
+        margin: 0px 0px 100px 0px; 
+        text-align: center;   
+    }
+    .intro{
+        padding: 0;
+        margin: 0;
+        font-size: 20px;
+        width: 100vw;
+        text-align: center;
+        /* padding-top: 30px;  */
+        color:  rgb(1, 20, 26);
+    }
+    .par-1{
+        font-size: 21px;
+        text-align: center;
+        width: 100vw;
+        
+        
+        
+        
+    
+    }
+    .par-2{
+        font-size: 21px;
+        text-align: center;
+        width: 100vw;
+        margin-top: 40px;
+        
+    }
+    .list{
+        list-style-type: none;
+        display: flex;
+        flex-direction: column;
+        margin-left: 0;
+        margin-right: 0;
+        align-items: center;
+    
+           
+        
+       }
+    .skills-container{
+        display: flex;
+        flex-direction: column;
+    
+        
+    }
+    .skills-container > h1{
+        font-size: 50px;
+    }
+    ul >li {
+        font-size: 15px;
+        
+    } 
+
+}
+
+
+
 
  
