--- a/react/projects/portfolio/portfolio/src/styles.css
+++ b/react/projects/portfolio/portfolio/src/styles.css
@@ -51,6 +51,7 @@ body{
 .navbar >a:hover{
     font-size: 40px;
     text-shadow: 3px 4px 3px rgb(64, 142, 163);
+    cursor: pointer;
 
 }
 
@@ -148,8 +149,24 @@ body{
     text-align: center;
     
 }
+.img-container{
+    margin-top: 15px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+img{
+    border: solid  rgb(4, 39, 49) 6px;
+    height: 220px;
+    width: 220px;
+    border-radius: 8%;
+
+}
 .resume{
     background-color:  #004250;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     height: 300px;
 }
 .resume > h1{
@@ -157,8 +174,20 @@ body{
     font-family: 'Open Sans', sans-serif;
     text-align: center;
     font-weight: bolder;
-    margin-top: 60px;
+    margin-top: 5px;
     color: rgb(211, 227, 211);
+}
+.image{
+    background-image: url('https://cdn61.picsart.com/187990019000201.jpg?r1024x1024');
+    display: flex;
+    justify-content: center;
+    height: 180px;
+    width: 350px;  
+    border-radius: 8%;
+    border: solid 10px  rgb(4, 39, 49);
+}
+.download{
+    padding-top: 60px;
 }
 .footer{
     font-size: 18px;
@@ -260,10 +289,18 @@ body{
     .skills-container > h1{
         font-size: 50px;
     }
-    ul >li {
-        font-size: 15px;
+    .list >li {
+        font-size: 30px;
         
-    } 
+    }
+    img{
+        border: solid  rgb(4, 39, 49) 6px;
+        height: 180px;
+        width: 180px;
+        border-radius: 8%;
+    
+    }
+    
 
 }
 
