--- a/projects/recipe-app-final-project/client/src/styles.css
+++ b/projects/recipe-app-final-project/client/src/styles.css
@@ -4,7 +4,7 @@
 
 img {
     object-fit: cover;
-    width: 100vw;
+    width: 70vw;
     border: solid 5px black;
     border-radius: 12px;
 }
@@ -49,6 +49,7 @@ img {
     border:none;
     border-radius: 1px;
     font-size: 19pt;
+    font-weight: 700;
     position: fixed;
     top: 0;
     margin: 0;
@@ -87,9 +88,18 @@ img {
 
 }
 
-h1, h2, h3, h4, h5{
-    margin: 6px 16px;
+.info >h1{
+    margin: -3px 0px;
     text-align: center;
+}
+.info >h3{
+    text-align: center;
+}
+.info >h4{
+    text-align: center;
+}
+.ingredient-container > h4{
+    margin-top: 0px; 
 }
 
 .myRecipe-container > div > div > div:nth-child(1n){
@@ -97,10 +107,6 @@ h1, h2, h3, h4, h5{
     border-bottom: 5px solid black;
 }
 
-.ingredients{    
-    display: flex;
-    width: 80vw;
-}
 
 .add-edit{
     padding-top: 60px;
@@ -118,24 +124,47 @@ h1, h2, h3, h4, h5{
     color: white;
     background: rgba(109, 53, 11, 0.5);
     top: -141px;
-    width: 80vw;
-    margin: 0 auto;
+    width: 50vw;
+    height: 80px;
+    margin-top: 50px;
+    /* margin: 0 auto; */
     border-radius: 7px;
 }
 .ingredients {
-    margin: -70px auto auto 30vw;
+    display: flex;
+    flex-direction: column;
+    /* margin: -70px auto auto 30vw; */
     font-size: 14pt;
+    justify-items: center;
+}
+.ingredients > h4{
+    margin-top: -124px;
+    font-size: 28px;
+    text-align: center;
+}
+.ingredients > h5{
+    margin-top: 40px;
+    font-size: 24px;
+    text-align: center;
+}
+.ingredients >ul{
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    font-size: 22px;
+    font-weight: 500;
+    padding-bottom:  100px;
 }
 .recipe-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     padding-bottom: 40px;
 }
 
 
-@media only screen and (min-width: 400px) {
-    .ingredients{
-        /* width: 50vw; */
-        font-size: 20pt;
-    }
+@media screen and (min-width: 375px) and (max-width: 968px){
+    
     .recipe-form{
         width: 400px;
         display: flex;
@@ -164,5 +193,33 @@ h1, h2, h3, h4, h5{
     
     .info {
         max-width: 700px;
+        margin-top: 84px;
     }
+    .info >h1{
+        font-size: 20px;
+        text-align: center;
+    }
+    .info >h3{
+        font-size: 15px;
+        text-align: center;
+    }
+    .ingredients > h4{
+        text-align: center;
+        font-size: 20px;
+        padding-top: 0;
+       
+    }
+    .ingredients > h5{
+        text-align: center;
+        font-size: 18px;
+        padding-top: 10px;
+        padding-bottom: 30px;
+    }
+    .ingredients > ul{
+        font-size: 14px;
+        margin-left: 40px;
+        font-weight: 600;
+    }
+    
+
 } 
