--- a/projects/seinfeld-project-version-3/src/components/styles.css
+++ b/projects/seinfeld-project-version-3/src/components/styles.css
@@ -327,13 +327,20 @@ width: 100%
         width: 270px;
     }
     .videos{
-        width: 100%
+        width: 100%;
+        
         }
     .video-main >h1 {
     padding-top: 23px;
     padding-bottom: 30px;
     font-size: 36px;
-    }    
+    } 
+    .videos>iframe {
+        border: 10px solid #000;
+        width: 65vw;
+        height: 18vh;
+        border-radius: 1%;
+    }   
 
     
 } 
