--- a/projects/recipe-app-final-project/client/src/styles.css
+++ b/projects/recipe-app-final-project/client/src/styles.css
@@ -59,7 +59,10 @@ img {
 }
 
 .auth-form {
-    padding: 80px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 80px 470px;
 }
 
 #root > div > div.nav-container > div > button, .myRecipe-container > div > div > div:nth-child(1n) > div > form > :nth-child(1n),
@@ -67,30 +70,39 @@ img {
     border: 1px solid saddlebrown;
     border-radius: 4px;
     font-size: 10pt;
-    padding: 8px; 
-    /* margin: 12px auto; */
+    /* padding: 8px;  */
+    /* margin: 10px auto; */
     display: block;
     /* margin-top: 20px; */
     height: 28px;
-    width: 110px;
+    width: 300px;
+    
+}
+.mapped-recipes{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .myRecipe-container > div > div > form {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-items: center;
 }
 
 .myRecipe-container > div > div > form > :nth-child(1n){
     display: block;
-    width: 90vw;
+    /* width: 90vw; */
     font-size: 19pt;
     margin: 8px auto;
     padding: 6px;
 
 }
 
-
+form{
+    margin: 20 auto;
+    width: 320px; 
+}
 .info >h1{
     margin: -3px 0px;
     text-align: center;
@@ -111,18 +123,9 @@ img {
     font-size: 22px;
     text-align: left;
 }
-
-.myRecipe-container > div > div > div:nth-child(1n){
-    margin: 76px 0;
-    border-bottom: 5px solid black;
-    
+.myRecipe-container{
+    align-self: center;
 }
-.recipe-form > input, textarea, select, button {
-    width : 200px;
-    margin: 0;
-    box-sizing: border-box;
-  }
-
 
 .add-edit{
     padding-top: 60px;
@@ -133,7 +136,7 @@ img {
     border: solid 5px black;
     text-align-last: center;    
     width: 100%;
-    margin: 10px auto;
+    /* margin: 10px auto; */
 }
 
 .info {
@@ -177,10 +180,13 @@ img {
     flex-direction: column;
     align-items: center;
     padding-bottom: 40px;
+    padding-top: 20px;
 }
 .recipe-container >h4{
     font-size: 25px;
 }
+
+
 
 @media screen and (min-width: 375px) and (max-width: 968px){
     
@@ -197,7 +203,7 @@ img {
         max-width: 800px;
         max-height: 600px;
         object-fit: cover;
-        padding-top: 38px;
+        /* padding-top: 20px; */
         margin: 0 auto;
         display: block;
     }
