--- a/react/projects/portfolio/portfolio/src/styles.css
+++ b/react/projects/portfolio/portfolio/src/styles.css
@@ -11,26 +11,34 @@
 body{
     background-color: rgb(211, 227, 230);   
 }
-
+.header{
+    background-image:url(/AdobeStock_127272662.jpeg);
+    margin: 0px;
+    height: 300px;
+    background-size: 100%;
+    background-position: center;
+}
 .header >h1{
   font-size: 85px; 
-  font-family: 'Mitr', sans-serif;
+  font-family: 'Nunito', sans-serif;
   text-align: left;
   color: rgb(211, 227, 211);
   text-shadow: 5px 6px 8px  rgb(1, 12, 15);
-  margin-top: 25px;
+  margin-top: 18px;
   margin-left: 130px;
   padding-top: 120px;
 }
 
 .header >h2{
     font-size: 50px; 
-    font-family: 'Mitr', sans-serif;
+    font-family: 'Nunito', sans-serif;
     text-align: left;
     color: rgb(211, 227, 211);
     text-shadow: 5px 6px 8px  rgb(1, 12, 15);
     margin-top: -10px;
     margin-left: 210px;
+    margin-bottom: 100px;
+    padding-bottom: 100px;
 }
 
 .navbar{
@@ -94,14 +102,14 @@ body{
     margin-top: 100px;
     margin-right: 100px;
     color: rgb(4, 39, 49);
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Nunito', sans-serif;
     
 
 }
 .par-2{
     grid-column: 2/3;
     font-size: 25px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Nunito', sans-serif;
     text-align: left;
     margin-top: 100px;
     color: rgb(4, 39, 49);
@@ -114,7 +122,7 @@ body{
 }
 .skills-container > h1{
     font-size: 50px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Nunito', sans-serif;
     color: rgb(211, 227, 211);
     text-align: center;
 }
@@ -129,12 +137,12 @@ body{
 }
 .list > h1{
     font-size: 40px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Nunito', sans-serif;
     color: rgb(211, 227, 211);
 }
 .list > li{
     font-size: 35px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Nunito', sans-serif;
     padding-bottom: 30px;
     color: rgb(211, 227, 211);
 }
@@ -145,12 +153,12 @@ body{
 .projects-container >h1{
     margin-top: 0px;
     font-size: 50px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Nunito', sans-serif;
     text-align: center;
     
 }
 .img-container{
-    margin-top: 15px;
+    margin-top: 0px;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -160,7 +168,11 @@ img{
     height: 220px;
     width: 220px;
     border-radius: 8%;
-
+    margin-bottom: 30px;   
+}
+.image > a{
+    font-size: 30px;
+    color:  #004250;
 }
 .resume{
     background-color:  #004250;
@@ -171,7 +183,7 @@ img{
 }
 .resume > h1{
     font-size: 50px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Nunito', sans-serif;
     text-align: center;
     font-weight: bolder;
     margin-top: 5px;
@@ -191,7 +203,7 @@ img{
 }
 .footer{
     font-size: 18px;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Nunito', sans-serif;
     text-align: center;
     margin-bottom: 50px;
 }
@@ -207,19 +219,20 @@ img{
         flex-wrap: wrap;
     }
     .navbar >a{
-        font-size: 20px;
+        font-size: 18px;
     }
     .header{
         background-repeat: no-repeat;
         flex-wrap: wrap;
-        height: fit-content;
-        /* width: fit-content; */
+        height: 150px;
+        
     
     }
     .header >h1{
-        font-size: 50px;
+        font-size: 30px;
         text-align: center; 
         margin-left: 0;
+        padding-top: 29px;
         
       }
     .header >h2 {
@@ -235,6 +248,11 @@ img{
         justify-content: center;
         align-items: center;
         margin-top: 0;
+        height: 500px;
+    }
+    .about-container >h1{
+        font-size: 29px;
+        margin-top: 62px;
     }
     .about{
         /* width: 100vw; */
@@ -246,27 +264,29 @@ img{
     .intro{
         padding: 0;
         margin: 0;
-        font-size: 20px;
+        font-size: 15px;
         width: 100vw;
         text-align: center;
         /* padding-top: 30px;  */
         color:  rgb(1, 20, 26);
     }
-    .par-1{
-        font-size: 21px;
-        text-align: center;
-        width: 100vw;
-        
-        
-        
-        
     
-    }
-    .par-2{
-        font-size: 21px;
+    .par-1{
         text-align: center;
         width: 100vw;
-        margin-top: 40px;
+        font-size: 20px;
+        margin-top: 22px;
+        font-size: 14px;
+    }
+    /* .par-1 >h2{
+        font-size: 15px;
+    } */
+    
+    .par-2{
+        font-size: 14px;
+        text-align: center;
+        width: 100vw;
+        margin-top: 27px;
         
     }
     .list{
@@ -275,7 +295,11 @@ img{
         flex-direction: column;
         margin-left: 0;
         margin-right: 0;
+        margin-top: 2px;
+        margin-bottom: 0px;
         align-items: center;
+        
+
     
            
         
@@ -287,24 +311,65 @@ img{
         
     }
     .skills-container > h1{
-        font-size: 50px;
+        font-size: 32px;
+        margin-top: 12px;
+    }
+    .projects-container{
+        height: 200px
+    }
+    .projects-container > h1{
+        font-size: 31px;
+        margin-top: 10px;
     }
     .list >li {
-        font-size: 30px;
+        font-size: 18px;
+        padding-bottom: 4px;
         
     }
     img{
         border: solid  rgb(4, 39, 49) 6px;
-        height: 180px;
-        width: 180px;
+        height: 140px;
+        width: 140px;
         border-radius: 8%;
+        margin-top: 10px;
     
     }
     
+    .image > a{
+        font-size: 20px;
+        margin-top: -40px;
+        
+    }
+    .resume{
+        height: 160px;
+    }
+    .resume >h1{
+        font-size: 32px;
+        margin-bottom: 10px;
+    }
+    .image{
+        height: 90px;
+        width: 175px; 
+    }
+    .footer{
+        margin-bottom: 15px;
+        height:
+    }
+    .footer >h1{
+        font-size: 31px;
+    }
+    .footer >h2{
+        font-size: 20px;
+    }
+    .footer >h3{
+        font-size: 17px;
+    }
+    .fa-4x {
+        font-size: 2em;
+    }
+    .icon{
+        margin-top: 15px;
+    }
 
 }
-
-
-
-
  
