--- a/projects/seinfeld-project-version-3/src/components/styles.css
+++ b/projects/seinfeld-project-version-3/src/components/styles.css
@@ -1,6 +1,13 @@
 *{
     margin: 0;
 }
+.home{
+    background-color: #1C4AA0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: solid 10px black
+}
 .characters-container {
     text-align: center;
     align-content: center;
@@ -12,18 +19,20 @@
     text-align: center;
 }
 .quote-container > h1{
-    font-size: 35px;
+    padding-top: 0px;
+    margin-top: -10px;
+    font-size: 25px;
     font-family: 'Khand', sans-serif;
     font-weight: light;
-    padding-bottom: 20px;
+    padding-bottom: 12px;
 }
 .quote-container > h2{
-    font-size: 24px;
+    font-size: 22px;
     text-align: justify;
     margin-left: 270px;
     margin-right: 270px;
     font-family: 'Khand', sans-serif;
-    padding-bottom: 30px;
+    padding-bottom: 20px;
 }
 .title{
     font-size: 75px;
@@ -34,19 +43,24 @@
     color: #EC2930;
     text-shadow: 2px 2px 2px black;
 }
+
 .logo-img{
     background-color: #1C4AA0;
     width: 100vw;
-    height: 260px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* border: solid 10px black */
 }
 .logo-img > img{
-    padding-left: 100px;
-    width: 80vw;
-    height: 260px;
+    /* padding-left: 100px; */
+    width: 400px;
+    height: 150px;
 }   
 .subtitle >h1{
-    margin-top: 30px;
-    font-size: 60px;
+    margin-top: 10px;
+    font-size: 44px;
     font-family: 'Lobster', cursive;
     text-align: center; 
     font-weight: bold;
@@ -58,6 +72,21 @@
     animation-direction: reverse;
     padding-bottom: 50px;
 }
+.navbar{
+    background-color: #1C4AA0;
+    
+}
+.navbar > a:nth-child(1){
+    color: whitesmoke
+}
+.navbar > a:nth-child(2){
+    color: whitesmoke
+}
+.navbar > a:nth-child(3){
+    color: whitesmoke
+}
+
+
 
 @keyframes header {
     from {
@@ -189,12 +218,13 @@ width: 100%
     padding-bottom: 50px;
 }
 .wrong-answer > h1{
-    font-size: 28px;
+    font-size: 20px;
     padding-top: 0;
     padding-bottom: 30px;
 } 
 .author >h2{
     padding-top: 0;
+    font-size: 20px;
 }
 @media screen and (min-width: 375px) and (max-width: 968px){
     .navbar{
@@ -204,7 +234,7 @@ width: 100%
         height: 90px;
     }
     .logo-img > img{
-        padding-left: 40px;
+        /* padding-left: 40px; */
         height: 90px;
     }
     .character-heading {
@@ -285,7 +315,7 @@ width: 100%
         border-radius: 5px;   
     }
     .author > h2{
-        font-size: 23px;
+        font-size: 30px;
     }
     .image{
         height: 280px;
