--- a/react/projects/portfolio/portfolio/src/styles.css
+++ b/react/projects/portfolio/portfolio/src/styles.css
@@ -26,7 +26,7 @@ body{
   text-shadow: 5px 6px 8px  rgb(1, 12, 15);
   margin-top: 18px;
   margin-left: 130px;
-  padding-top: 120px;
+  padding-top: 90px;
 }
 
 .header >h2{
@@ -74,47 +74,53 @@ body{
     color:  rgb(4, 39, 49);
     text-align: center;
 }
-
-.about{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: none;
-    grid-gap: 40px;
-    margin-left: 30px;
-    width: 100%;
-    margin-bottom: 100px;
-    
-}
-
 .intro{
+    display: grid;
+    grid-gap: 50px;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
+}
+.par-intro{
     grid-column: 1/2;
+    grid-row: 1/3;
     font-size: 27px;
     color:  rgb(4, 39, 49);
     font-family: 'Nunito', sans-serif;
-    margin-left: 40px;
-    padding: 60px;
-    padding-top: 100px;
+    margin-left: 50px;
+    margin-right: 50px;
+    margin-top: 50px;
+    /* padding: 60px; */
+    /* padding-top: 100px; */
+}
+.par-intro >h3{
+    font-size: 40px;
+    font-style: italic;
 }
 .par-1{
     grid-column: 2/3;
+    grid-row: 2/5;
     font-size: 25px;
     text-align: left;
-    margin-top: 100px;
-    margin-right: 100px;
+    margin-left: 170px;
+    margin-right: 170px;
+    margin-top: 50px;
+    /* margin-right: 100px; */
     color: rgb(4, 39, 49);
     font-family: 'Nunito', sans-serif;
-    
-
 }
 .par-2{
-    grid-column: 2/3;
+    grid-column: 1/3;
+    grid-row: 5/6;
+    /* width: 100vw; */
+    margin-left: 80px;
+    margin-right: 80px; 
+    margin-top: 0;
+    padding-top: 0;
     font-size: 25px;
     font-family: 'Nunito', sans-serif;
-    text-align: left;
-    margin-top: 100px;
+    text-align: justify;
     color: rgb(4, 39, 49);
-   
-    margin-right: 100px;
+    
 }
 .skills-container{
     background-color: #004250;
@@ -147,16 +153,15 @@ body{
     color: rgb(211, 227, 211);
 }
 .projects-container{
-    height: 300px;
-
+    height: 450px;
 }
 .projects-container >h1{
     margin-top: 0px;
+    margin-bottom: 15px;
     font-size: 50px;
     font-family: 'Nunito', sans-serif;
     text-align: center;
-    color:  rgb(4, 39, 49);
-    
+    color:  rgb(4, 39, 49);   
 }
 
 .img-container{
@@ -164,19 +169,92 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    
 }
  .seinfeld{
-    border: solid  rgb(4, 39, 49) 2px;
-    height: 220px;
-    width: 220px;
+    border: solid  rgb(4, 39, 49) 4px;
+    height: 324px;
+    width: 240px;
     border-radius: 8%;
     margin-bottom: 30px; 
     text-align: center;  
+    color: rgb(4, 39, 49);
+    box-shadow: black 3px 5px 5px;
 }
+.budget{
+    border: solid  rgb(4, 39, 49) 4px;
+    height: 324px;
+    width: 240px;
+    border-radius: 8%;
+    margin-bottom: 30px; 
+    text-align: center;  
+    color: rgb(4, 39, 49);
+    box-shadow: black 3px 5px 5px;
+}
+.pets{
+    border: solid  rgb(4, 39, 49) 4px;
+    height: 324px;
+    width: 240px;
+    border-radius: 8%;
+    margin-bottom: 30px; 
+    text-align: center;  
+    color: rgb(4, 39, 49);
+    box-shadow: black 3px 5px 5px;
+}
+.seinfeld p{
+    color: rgb(4, 39, 49);
+    
+}
+.seinfeld > h3{
+    color: black;
+    padding-bottom: 2px;
+    margin-bottom: 5px;
+}
+.seinfeld > h4{
+    color: rgb(7, 45, 56);
+    padding-bottom: 6px;
+    font-size: 15px;
+    font-style: italic;
+}
+.budget >p{
+    color: rgb(4, 39, 49);
+}
+.budget> h3{
+    color: black;
+    padding-bottom: 2px;
+    margin-bottom: 10px;
+}
+.budget > h4{
+    color: rgb(7, 45, 56);
+    padding-bottom: 15px;
+    font-size: 15px;
+    font-style: italic;
+}
+
+.pets> h3{
+    padding-bottom: 2px;
+    color: black;
+    margin-bottom: 5px;
+    
+}
+.pets> h4{
+    color: rgb(7, 45, 56);
+    padding-bottom: 6px;
+    font-size: 15px;
+    font-style: italic;
+}
+.pets> p{
+    color: rgb(4, 39, 49)
+}
+
 .image > a{
     font-size: 30px;
     color:  #004250;
+    text-decoration: none;
 } 
+.seinfeld >p{
+    text-decoration: none;
+}
 .resume{
     background-color:  #004250;
     display: flex;
@@ -193,13 +271,13 @@ body{
     color: rgb(211, 227, 211);
 }
 .image{
-    background-color:  rgb(211, 227, 211);
+    background-color: rgb(239, 245, 239);
     display: flex;
     justify-content: center;
     height: 180px;
     width: 350px;  
-    border-radius: 8%;
-    border: solid 10px  rgb(4, 39, 49);
+    border-radius: 5%;
+    border: solid 15px  rgb(4, 39, 49);
 }
 .download{
     padding-top: 60px;
