--- a/react/projects/portfolio/portfolio/src/styles.css
+++ b/react/projects/portfolio/portfolio/src/styles.css
@@ -89,13 +89,14 @@ body{
     margin-left: 50px;
     margin-right: 50px;
     margin-top: 50px;
-    /* padding: 60px; */
-    /* padding-top: 100px; */
+
 }
 .par-intro >h3{
-    font-size: 40px;
+    font-size: 42px;
     font-style: italic;
+    margin-left: 30px;
 }
+
 .par-1{
     grid-column: 2/3;
     grid-row: 2/5;
@@ -104,9 +105,11 @@ body{
     margin-left: 170px;
     margin-right: 170px;
     margin-top: 50px;
-    /* margin-right: 100px; */
     color: rgb(4, 39, 49);
     font-family: 'Nunito', sans-serif;
+}
+.par-1 >h3{
+    font-size: 30px;
 }
 .par-2{
     grid-column: 1/3;
@@ -119,8 +122,10 @@ body{
     font-size: 25px;
     font-family: 'Nunito', sans-serif;
     text-align: justify;
-    color: rgb(4, 39, 49);
-    
+    color: rgb(4, 39, 49);    
+}
+.par-2 >h3{
+    font-size: 34px;
 }
 .skills-container{
     background-color: #004250;
@@ -157,7 +162,7 @@ body{
 }
 .projects-container >h1{
     margin-top: 0px;
-    margin-bottom: 15px;
+    margin-bottom: 18px;
     font-size: 50px;
     font-family: 'Nunito', sans-serif;
     text-align: center;
