--- a/projects/seinfeld-project-final-version/src/components/styles.css
+++ b/projects/seinfeld-project-final-version/src/components/styles.css
@@ -60,7 +60,7 @@
 }   
 .subtitle >h1{
     margin-top: 10px;
-    font-size: 44px;
+    font-size: 50px;
     font-family: 'Lobster', cursive;
     text-align: center; 
     font-weight: bold;
@@ -141,24 +141,25 @@ body{
 .submit{
     height: 28px;
     width: 130px;
+    line-height: 7px;
     padding-top: 5px;
     margin-top: 5px;
     font-size: 15px;
     border: solid 2px black;
     font-weight: bold;
-    border-radius: 5px;
+    
 } 
 .next-question{
     display: flex;
     height: 28px;
     width: 130px;
-    /* margin-left: 575px; */
+    line-height: 12px;
     margin-top: 5px;
     margin-bottom: 10px;
     font-size: 15px;
     border: solid 2px black;
     font-weight: bold;
-    border-radius: 5px;
+    
 }
 
 .image{
@@ -203,8 +204,13 @@ width: 100%
     font-family: 'Lobster', cursive;
 }
 .character-facts >img{
-    border: 10px solid black;
+    border: 5px solid black;
+    border-radius: 5px;
+    box-shadow: 0px 0px 3px 5px;
     width: 500px;
+}
+.character-facts >h1{
+    font-weight: bold;
 }
 .character-facts >h2{
     padding-top: 50px;
@@ -226,9 +232,122 @@ width: 100%
     padding-top: 0;
     font-size: 20px;
 }
-@media screen and (min-width: 375px) and (max-width: 968px){
+@media screen and (min-width: 601px) and (max-width: 968px){
+    .navbar{
+        font-size: 26px;
+    }
+    .logo-img{
+        height: 105px;
+    }
+    .logo-img > img{
+        /* padding-left: 40px; */
+        height: 105px;
+    }
+    .character-heading {
+        margin-top: 20px;   
+    }    
+    .character-heading > h1{
+        font-size: 40px;
+    }
+    .character-facts > h2{
+        font-size: 35px;
+    }
+    .character-facts >img {
+        border: 5px solid black;
+        border-radius: 5px;
+        width: 330px;
+    }
+    .characters-container{
+        padding-bottom: 30px;
+    }
+    .character-facts{
+        margin-left: 0px;
+        margin-right: 0px;    
+    }
+    .character-facts >p{
+        font-size: 22px;
+        text-align: justify;
+        padding-bottom: 40px;
+        margin: 19px;
+        margin-left: 60px;
+        margin-right: 60px;
+    }
+    .subtitle > h1{
+        margin-top: 10px;
+        font-size: 41px;
+        padding-bottom: 20px;
+}
+
+    .quote-container{
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+    .quote-container >h1{
+        font-size: 23px;
+        padding-top: 6px;
+    }
+    .quote-container >h2{
+        padding-bottom: 20px;
+        font-size: 18px;
+        text-align: justify;
+        margin-left: 140px;
+        margin-right: 140px;
+    
+    }
+    .choice{
+        display: flex;
+        justify-content: left;
+        width: 200px;
+        height: 22px;
+        margin-left: 0px;
+        font-size: 16px ;            
+    } 
+    .choice >input[type=radio] {
+        
+        margin-right: 4px;
+    } 
+    .submit {
+        height: 24px;
+        width: 100px;
+        font-size: 11px;
+        margin-top: 1px;   
+    }
+    .next-question {
+        display: flex;
+        height: 24px;
+        width: 100px;
+        margin-top: 4px;
+        margin-bottom: 10px;
+        font-size: 11px;
+        border: solid 2px black;
+        font-weight: bold; 
+    }
+    .author > h2{
+        font-size: 30px;
+    }
+    .image{
+        height: 280px;
+        width: 280px;
+    } 
+    .videos{
+        width: 100%;    
+    }
+    .video-main >h1 {
+    margin-top: 8px;
+    padding-bottom: 30px;
+    font-size: 32px;
+    } 
+    .videos>iframe {
+        border: 10px solid #000;
+        width: 64vw;
+        height: 18vh;
+        border-radius: 1%;
+    }   
+} 
+@media screen and (min-width: 375px) and (max-width: 601px){
     .navbar{
         font-size: 19px;
+        width: 100vw;
     }
     .logo-img{
         height: 90px;
@@ -241,11 +360,11 @@ width: 100%
         margin-top: 20px;   
     }    
     .character-heading > h1{
-        padding-bottom: 40px;
         font-size: 36px;
     }
     .character-facts > h2{
         font-size: 30px;
+        padding-top: 12px;
     }
     .character-facts >img {
         border: 5px solid black;
@@ -279,40 +398,39 @@ width: 100%
     }
     .quote-container >h2{
         padding-bottom: 20px;
-        font-size: 13px;
+        font-size: 14px;
         text-align: justify;
-        margin-left: 32px;
-        margin-right: 32px;
+        margin-left: 23px;
+        margin-right: 23px;
     
     }
     .choice{
         display: flex;
         justify-content: left;
-        width: 170px;
-        height: 22px;
+        width: 150px;
+        height: 18px;
         margin-left: 0px;
-        font-size: 15px ;            
+        font-size: 14px ;            
     } 
     .choice >input[type=radio] {
         
         margin-right: 4px;
     } 
     .submit {
-        height: 24px;
+        height: 20px;
         width: 100px;
         font-size: 11px;
         margin-top: 1px;   
     }
     .next-question {
         display: flex;
-        height: 24px;
+        height: 20px;
         width: 100px;
         margin-top: 4px;
         margin-bottom: 10px;
         font-size: 11px;
         border: solid 2px black;
-        font-weight: bold;
-        border-radius: 5px;   
+        font-weight: bold; 
     }
     .author > h2{
         font-size: 30px;
@@ -325,9 +443,9 @@ width: 100%
         width: 100%;    
     }
     .video-main >h1 {
-    margin-top: 0px;
+    margin-top: 8px;
     padding-bottom: 30px;
-    font-size: 32px;
+    font-size: 29px;
     } 
     .videos>iframe {
         border: 10px solid #000;
